# agent-lens

./: README.md  pyproject.toml
agent_lens/: __init__.py  cli.py  event_bus.py  main.py  models.py  process_monitor.py  store.py  watcher.py
agent_lens/static/: app.js  index.html  style.css
tests/: __init__.py  test_api.py  test_models.py  test_process_monitor.py  test_store.py  test_watcher.py
